--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-This Repository is for Private Use
+This Repository is meant as a Training for Ruby Programming.
+
+I am self-studying Ruby and would like to move on to Rails after
+Programs seen here are testaments to the knowledge of programming in Ruby
+While not 100% testament to the knowledge of Ruby specifics
+It serves as proof that to a certain degree
+I am capable of using Ruby.
