--- a/README
+++ b/README
@@ -1,7 +1,6 @@
-This Repository is meant as a Training for Ruby Programming.
+# Welcome to my Ruby Repository
 
-I am self-studying Ruby and would like to move on to Rails after
-Programs seen here are testaments to the knowledge of programming in Ruby
-While not 100% testament to the knowledge of Ruby specifics
-It serves as proof that to a certain degree
-I am capable of using Ruby.
+> This repository comprises different exercises as well as some that I thought of just doing.\
+I hope to be better with this language in both coding and logical thinking.
+
+Thanks to ***THE ODIN PROJECT*** and ***CODECADEMY*** for most of what I know comes from them.
