--- a/README
+++ b/README
@@ -1,6 +1,3 @@
 # Welcome to my Ruby Repository
 
-> This repository comprises different exercises as well as some that I thought of just doing.\
-I hope to be better with this language in both coding and logical thinking.
-
-Thanks to ***THE ODIN PROJECT*** and ***CODECADEMY*** for most of what I know comes from them.
+> This repository comprises different solutions to exercises / challenges from the internet.\
