--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 # Welcome to my Ruby Repository
 
-> This repository comprises different solutions to exercises / challenges from the internet.\
+> This repository comprises different solutions to exercises / challenges from the internet.
