--- a/README
+++ b/README
@@ -2,5 +2,5 @@
 
 > This repository comprises different solutions to exercises / challenges from the internet. From simple to intermediate levels of complexity. 
 
-Some solutions within this repository do not conform to **"Clean Code"** but focus more on just the functionality of the solution.\
-**Performance** was not taken into consideration.
+Some solutions within this repository do not conform to ***"Clean Code"*** but focus more on just the functionality of the solution.
+***Performance*** was not taken into consideration.
