--- a/README
+++ b/README
@@ -2,4 +2,4 @@
 
 This repository comprises different solutions to exercises / challenges from the internet. From simple to intermediate levels of complexity. 
 
-Some solutions within this repository do not conform to "Clean Code" but focus more on just the functionality of the solution.
+Some solutions within this repository do not conform to the "Clean Code" standards, instead, focusing more on the functionality of the solution.
